--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -5,40 +5,45 @@
 <h1 class="text-center text-primary">TODO LIST</h1>
 <div class="container">
   <div class="box">
-    <label for="add">Task Name</label>
+    <!-- <label for="add">Task Name</label> -->
     <div class="input-fields">
-      <input type="text" class="form-control" />
-      <button type="submit" class="btn btn-success">Add task</button>
+      <input
+        type="text"
+        class="form-control"
+        [(ngModel)]="taskname"
+        placeholder="Enter your  task name"
+      />
+      <button type="submit" class="btn btn-success" (click)="addtask()">
+        Add task
+      </button>
     </div>
-    <h3 class="text-center bg-light m-3">tasks lists</h3>
+    <h3 class="text-center bg-light m-4 text-danger">Tasks List</h3>
 
-    <div class="todo-list mt-3">
-      <h5>Tasks list</h5>
-      <div class="row">
-        <div class="col-1">
-          <input type="checkbox" />
-        </div>
-        <div class="col-5">task1</div>
-        <div class="col">
-          <button type="button" class="btn btn-outline-light text-danger">
-            <i class="bi bi-trash"></i>
-          </button>
-        </div>
-      </div>
-    </div>
-    <div class="todo-list mt-3">
-      <h5>finished Tasks list</h5>
-      <div class="row">
-        <div class="col-1">
-          <input type="checkbox" />
-        </div>
-        <div class="col-5">task1</div>
-        <div class="col">
-          <button type="button" class="btn btn-outline-light text-danger">
-            <i class="bi bi-trash"></i>
-          </button>
-        </div>
-      </div>
-    </div>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>SI.No</th>
+          <th>Task Name</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let task of tasks">
+          <td>{{ task.id }}</td>
+          <td>{{ task.taskname }}</td>
+          <td>
+            <button
+              type="button"
+              class="btn btn-outline-light text-danger"
+              (click)="deletetask(task.id)"
+              data-bs-toggle="modal"
+              data-bs-target="#myModal"
+            >
+              <i class="bi bi-trash"></i>
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
